[package]
name = "bevy_rich_text_3d_animator"
version = "0.0.0"
edition = "2024"
authors = ["Bli-AIk <haikun2333@gmail.com>"]
license = "LGPL-3.0-or-later"
repository = "https://github.com/Bli-AIk/souprune"
description = "Mesh text animation system for Bevy engine"

[dependencies]
bevy = "0.17.2"
serde = { version = "1.0", features = ["derive"] }